@@ -1,0 +1,23 @@
+# Create symlinks for i.mx keypads and touchscreens
+#SUBSYSTEM=="input" KERNEL=="event*" ATTRS{name}=="mxckpd",     SYMLINK+="input/keyboard0"
+#SUBSYSTEM=="input" KERNEL=="event*" ATTRS{name}=="mxc_ts",     SYMLINK+="input/ts0"
+#SUBSYSTEM=="input" KERNEL=="event*" ATTRS{name}=="imx_adc_ts", SYMLINK+="input/ts0"
+#SUBSYSTEM=="input" KERNEL=="event*" ATTRS{name}=="mpr084",     SYMLINK+="input/keyboard0"
+#SUBSYSTEM=="input" KERNEL=="event*" ATTRS{name}=="tsc2007",    SYMLINK+="input/ts0"
+#SUBSYSTEM=="input" KERNEL=="event*" ATTRS{name} =="STMP3XXX touchscreen",    SYMLINK+="input/ts0"
+#SUBSYSTEM=="input" KERNEL=="event*" ATTRS{name} =="MXS touchscreen",    SYMLINK+="input/ts0"
+#SUBSYSTEM=="input" KERNEL=="event*" ATTRS{name} =="HannStar P1003 Touchscreen",	SYMLINK+="input/ts0"
+#SUBSYSTEM=="input" KERNEL=="event*" ATTRS{name} =="eGalax Touch Screen",	SYMLINK+="input/ts0"
+
+# The long class name gets cut off to be mc13783_connectiv in 
+# /sys/class/mc13783_connectivity/mc13783_connectivit
+KERNEL=="mc13783_connectiv*",  NAME="mc13783_connectivity"
+# Anyone has readonly permission to IIM device file
+KERNEL=="mxc_iim",  MODE="0444", SYMLINK+="mxc_mem"
+KERNEL=="mxs_viim", MODE="0444", SYMLINK+="mxc_mem"
+KERNEL=="mxc_ipu",  MODE="0666"
+KERNEL=="mxc_vpu",  MODE="0666"
+SUBSYSTEM=="video", MODE="0660"
+KERNEL=="fb[0-9]",  MODE="0660", GROUP="video"
+KERNEL=="gsl_kmod", MODE="0660", GROUP="video"
+KERNEL=="galcore",  MODE="0660", GROUP="video"
